# multiset

./: .pylintrc  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  dev-requirements.in  dev-requirements.txt  environment.yml  flit.ini  make.bat  multiset.py  multiset.pyi  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_multiset.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python-dependabot.yml  python-publish.yml  python-test.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat  requirements.txt
multiset/: __init__.py  __init__.pyi  multiset.py  multiset.pyi
tests/: conftest.py  test_multiset.py
