[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml]>=3.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "multiset"
description = "An implementation of a multiset."
license = {text = "MIT", file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
home-page = "https://github.com/wheerd/multiset"
repository = "https://github.com/wheerd/multiset"
documentation = "https://multiset.readthedocs.io/"
authors = [
    {name = "Manuel Krebber", email = "admin@wheerd.de"},
]
readme = {file = "README.rst", content-type="text/x-rst"}
dynamic = ["version"]

[tool.setuptools_scm]
