[metadata]
name = multiset
description = An implementation of a multiset.
long-description = file: README.rst
license = MIT
license-files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python,
    Programming Language :: Python :: 2,
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
home-page = https://github.com/wheerd/multiset
repository = https://github.com/wheerd/multiset
documentation = https://multiset.readthedocs.io/
author = Manuel Krebber
author-email = admin@wheerd.de
readme = file: README.rst

[options]
zip_safe = True
include_package_data = True
setup_requires =
    setuptools >= 42
    setuptools_scm
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
py_modules = multiset
test_suite = tests

[options.package_data]
multiset = *.pyi, py.typed

[flake8]
max-line-length = 120

[pep8]
max-line-length = 120

[yapf]
based_on_style = pep8
column_limit = 120

[aliases]
test=pytest

[bdist_wheel]
universal=1
